--- a/portfolio-app/package.json
+++ b/portfolio-app/package.json
@@ -14,7 +14,8 @@
     "@material-tailwind/react": "^2.1.10",
     "flowbite": "^2.5.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
