--- a/portfolio-app/package.json
+++ b/portfolio-app/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
+    "animate.css": "^4.1.1",
     "flowbite": "^2.5.1",
+    "framer-motion": "^11.9.0",
     "react": "^18.3.1",
+    "react-animate-on-scroll": "^2.1.9",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
   },
