--- a/portfolio-app/package.json
+++ b/portfolio-app/package.json
@@ -13,12 +13,15 @@
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
     "animate.css": "^4.1.1",
+    "debug": "^4.3.7",
     "flowbite": "^2.5.1",
     "framer-motion": "^11.9.0",
     "react": "^18.3.1",
     "react-animate-on-scroll": "^2.1.9",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "uuid": "^10.0.0",
+    "vercel": "^37.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
